--- a/notebooks/Submission.ipynb
+++ b/notebooks/Submission.ipynb
@@ -1865,6 +1865,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "    Python - 3.10.14\n",
+    "\n",
     "    numpy=1.26.4\n",
     "    pandas=2.2.2\n",
     "    bertopic=0.16.4\n",
@@ -1930,7 +1932,7 @@
    "source": [
     "### Численные характеристики системы\n",
     "\n",
-    "    1. Занимаемый объем: 370 МБ с учетом установленных зависимостей и растровых моделей\n",
+    "    1. Занимаемый объем: 370 МБ без учета установленных зависимостей\n",
     "    2. Точность кластеризации при тематическом моделировании - 0.68-0.99 в зависимости от данных документов при стандартной конфигурации\n",
     "    3. Скорость работы на AMD Ryzen 5 5600H 3.30 GHz, 16 GB RAM - 0.049 с. в среднем на строку данного датасета"
    ],
